--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "ipware": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.35"
   }
 }
